ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: razor-app-ingress
  namespace: dotnet-application
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  tls:
    - hosts:
        - moravaei.com
        - www.moravaei.com
      secretName: www-tls-moravaei-com
  rules:
    - host: moravaei.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: razor-app-service
                port:
                  number: 443
    - host: www.moravaei.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: razor-app-service
                port:
                  number: 443
